syntax = "proto3";

import "google/api/annotations.proto";

option java_multiple_files = true;
option java_package = "example.winecellar";
option java_outer_classname = "WinecellarProto";

option go_package = "github.com/xhanin/examples/v1"; // required for openapi generation

package winecellar;

service WinecellarService {
  rpc ListAll (ListAllWinecellarRequest) returns (stream Winecellar) {
    option (google.api.http) = {
      get: "/winecellars"
    };
  }
  rpc LoadStock (LoadWinecellarStockRequest) returns (WinecellarStock) {
    option (google.api.http) = {
      get: "/winecellars/{wine_cellar_id}/stock"
    };
  }
}

message ListAllWinecellarRequest {
}

message LoadWinecellarStockRequest {
  string wine_cellar_id = 1;
}

message Winecellar {
  string id = 1;
  string owner = 2;
  string name = 3;
}

message WinecellarStock {
  string wine_cellar_id = 1;
  repeated WinecellarStockItem items = 2;
}

message WinecellarStockItem {
    WineryRef winery_ref = 1;
    int32 quantity = 2;
}

message WineryRef {
  string id = 1;
  string name = 2;
}
